--- a/users/templates/views/login.html
+++ b/users/templates/views/login.html
@@ -1,4 +1,6 @@
+
 {%load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr" data-nav-layout="vertical" data-vertical-style="overlay" class="light" data-header-styles="light" data-menu-styles="light" data-toggled="close">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
@@ -57,17 +59,9 @@
                               <div class="text-center my-[3rem] authentication-barrier">
                                   <span>OR</span>
                               </div>
-                              <div class="grid grid-cols-12 gap-y-4">
-                                  <div class="xl:col-span-12 col-span-12 mt-0">
-                                      <label for="signin-username" class="form-label text-default">User Name</label>
-                                      <input type="text" class="form-control form-control-lg w-full !rounded-md" id="signin-username" placeholder="user name">
-                                  </div>
-                                  <div class="xl:col-span-12 col-span-12 mb-4">
-                                      <label for="signin-password" class="form-label text-default block">Password<a href="resetpassword-cover.html" class="ltr:float-right rtl:float-left text-danger">Forget password ?</a></label>
-                                      <div class="input-group">
-                                          <input type="password" class="form-control form-control-lg !rounded-e-none" id="signin-password" placeholder="password">
-                                          <button aria-label="button" type="button" class="ti-btn ti-btn-light !rounded-s-none !mb-0" onclick="createpassword('signin-password',this)" id="button-addon2"><i class="ri-eye-off-line align-middle"></i></button>
-                                      </div>
+                              <form action=""  method = "POST">
+                                {% csrf_token %}
+                                {{ login_form|crispy }}
                                       <div class="mt-2">
                                           <div class="form-check !ps-0">
                                               <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
@@ -78,9 +72,11 @@
                                       </div>
                                   </div>
                                   <div class="xl:col-span-12 col-span-12 grid mt-2">
-                                      <a href="index.html" class="ti-btn ti-btn-lg bg-primary text-white !font-medium dark:border-defaultborder/10">Sign In</a>
+                                    <button class="ti-btn ti-btn-lg bg-primary text-white !font-medium dark:border-defaultborder/10" type="submit">Sign In</button>
+                                      {% comment %} <a href="index.html" class="ti-btn ti-btn-lg bg-primary text-white !font-medium dark:border-defaultborder/10">Sign In</a> {% endcomment %}
                                   </div>
                               </div>
+                            </form>
                               <div class="text-center">
                                   <p class="text-[0.75rem] text-[#8c9097] dark:text-white/50 mt-4">Dont have an account? <a href="signup-cover.html" class="text-primary">Sign Up</a></p>
                               </div>
